--- a/.github/workflows/swift.yml
+++ b/.github/workflows/swift.yml
@@ -8,9 +8,9 @@ on:
 
 jobs:
   build:
-
+    env:
+      DEVELOPER_DIR: /Applications/Xcode_13.app/Contents/Developer
     runs-on: macos-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Build
